fix index page responsive on mobile screens

--- a/public/style/index.scss
+++ b/public/style/index.scss
@@ -42,17 +42,24 @@
         right: 100vw;
         padding: 0px 25px 25px 0;
         display: flex;
-        
-          .project-item-description {
-            padding: 0px 0 0 100px;
-            display: flex;
-            flex-direction: column;
 
-            .text {
-              max-width: 1000px;
-            }
+        .project-item-description {
+          padding: 0px 0 0 100px;
+          display: flex;
+          flex-direction: column;
+
+          .text {
+            max-width: 1000px;
           }
-        
+        }
+
+        .project-item-picture {
+          width: 650px;
+          height: 550px;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+
       }
     }
 
@@ -61,14 +68,52 @@
   .side-picture {
     margin-right: 90px;
   }
+
   .heading-1 {
-    font-size: 2em;
+    font-size: 1.5em;
   }
+
   .heading-2 {
     font-size: 1.7em;
   }
 
 }
+
 nav {
   width: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+
+  .content-container {
+
+    .project-item {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .project-item-description {
+        padding: 50px !important;
+      }
+
+      .project-item-picture {
+
+        width: 80vw !important;
+      }
+
+    }
+  }
+
+  .heading-container {
+    flex-direction: column;
+
+    .side-picture {
+      margin: 0;
+    }
+
+    .heading-wrapper {
+      text-align: center;
+    }
+  }
+
+
 }
